Replace deprecated Java reflection methods to avoid warnings